Fix coinbase tip button alignment

--- a/app/assets/stylesheets/site/article.css.sass
+++ b/app/assets/stylesheets/site/article.css.sass
@@ -36,6 +36,7 @@
 
     .cb-tip-button
       margin-left: -4px
+      margin-right: -300px
       margin-bottom: -9px
 
 .article-container
